Fix outline and word-break in social links

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1128,6 +1128,7 @@ pre {
   display: inline-block;
   height: 35px;
   width: 35px;
+  outline: 0;
 }
 .social-links > .link:hover > .icon {
   fill: #337ab7;
@@ -1151,6 +1152,7 @@ pre {
   border-radius: 2px;
   height: 22px;
   line-height: 22px;
+  word-break: keep-all;
   opacity: 0;
   -webkit-transition: opacity 150ms linear, -webkit-transform 150ms linear, -webkit-transform 150ms linear;
           transition: opacity 150ms linear, transform 150ms linear, -webkit-transform 150ms linear;
