--- a/src/styles/components/_social-links.styl
+++ b/src/styles/components/_social-links.styl
@@ -8,6 +8,7 @@
         display inline-block
         height 35px
         width 35px
+        outline 0
 
         &:hover
             > .icon
@@ -31,6 +32,7 @@
             border-radius 2px
             height 22px
             line-height 22px
+            word-break keep-all
             opacity 0
             transition opacity 150ms linear, transform 150ms linear, -webkit-transform 150ms linear
             transform translate3d(0,-8px,0)
